--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~4.7.14",
     "@coreui/utils": "^2.0.2",
+    "@ng-select/ng-select": "^12.0.7",
     "chart.js": "^3.9.1",
     "firebase": "^10.8.1",
     "lodash-es": "^4.17.21",
